first draft of paper completed

--- a/report.tex
+++ b/report.tex
@@ -466,20 +466,27 @@ Yes
 
 
 \subsection{Language Comparison}
-Language Comparison
+Prolog is a programming language that is often compared to other popular programming languages such as Python, C++, and Java. While each language has its own strengths and weaknesses, Prolog offers a unique approach to problem-solving that sets it apart from the others. In this comparison, we will explore the advantages and disadvantages of Prolog when compared to Python, C++, and Java.
 
 \subsubsection{C++}
-C++ Section
+\noindent\newline C++ is a very popular language that has existed for a long time. C++ is seen as a general purpose language that be used to develop websites, programs, and more. The first difference between C++ and Prolog is that C++ is an imperative language \href{https://icarus.cs.weber.edu/~dab/cs1410/textbook/1.Basics/programs.html}{(1)}. Imperative languages have a step-by-step procedure that is written, then executed \href{https://www.educative.io/blog/declarative-vs-imperative-programming}{(2)}. 
 
-\subsubsection{Python}
-Python Section
+\noindent\newline The main advantage of using C++ over Prolog can be the vast number of libraries created and modified by the larger C++ programming community. The use of these libraries can make the overall C++ language easier to use, while Prolog's community is much smaller. If Prolog had a community the size of C++, then we would expect to see more features and applications to be created. 
+
 
 \subsubsection{Java}
+\noindent\newline Java is another imperative programming language that is commonly used for back-end development projects \href{https://blogs.oracle.com/oracleuniversity/post/why-does-java-remain-so-popular}{(3)}. The main advantage of using Java is the widespread use of the language in persnoal and industry use. Java is also have a large system of libraries, frameworks, and sources of information to learn more about the language. Object-Oriented programming is also another important aspect that is used for Java programs.
+
+\subsubsection{Python}
+The last language that will be compared is Python. Python is another imperative programming language. Python is typically seen as the starter language for learning computer science, software engineering, and more. The main advantage is that it is used around the world, follows modularity programming, and has many resources to advance python skills.
+
+\subsubsection{Why Prolog}
+\noindent\newline After reading three different comparisons, we can see that Prolog is not perfect. However, Prolog is very useful in its own respect. By being a declarative programming language, and using unique features, many real-world applications are used every day. While C++, Python, and Java may be easier to understand to write and execute, Prolog is well-suited for tasks that require logical reasoning and knowledge representation.
 
 
-\subsection{Conclusion}
-Here is my conclusion.
 
+\subsection{Paper Conclusion}
+In summary, Prolog is an influential and unique programming language that provides an array of impressive features and applications. Its proficiency in logic programming, rule-based systems, and natural language processing make it an excellent resource for domains like automated planning and expert systems. While popular languages such as C++, Java, and Python are impressive in their own respect, Prolog offers a different approach and coding convention for programmers. Despite being developed many decades ago, Prolog continues to be relevant in todays computer science world, and will continue to be used with the growing field of Artificial Intelligence.
 ...
 
 \section{Conclusions}\label{conclusions}
@@ -521,6 +528,12 @@ Applications Section:\newline
 (7) \href{https://www.routledge.com/Expert-Systems-in-Finance-Smart-Financial-Applications-in-Big-Data-Environments/Metawa-Elhoseny-Hassanien-Hassan/p/book/9780367729011}{7}\newline
 (8) \href{https://cw.fel.cvut.cz/old/_media/courses/a4m33pah/planning-course.pdf}{8}\newline
 
+
+Comparisons Section:\newline
+(1) \href{https://icarus.cs.weber.edu/~dab/cs1410/textbook/1.Basics/programs.html}{1}\newline
+(2) \href{https://www.educative.io/blog/declarative-vs-imperative-programming}{2}\newline
+(3) \href{https://blogs.oracle.com/oracleuniversity/post/why-does-java-remain-so-popular}{3}\newline
+(4)
 
 \end{thebibliography}
 
