conclusion done, hw 6 updated

--- a/report.tex
+++ b/report.tex
@@ -201,31 +201,25 @@ For question 2, the task was to draw a SLD Recursion Tree for the following:\new
 \noindent\newline I split this into to two parts (Top and Bottom Questions).
 
 \subsubsection{Part 1 (Top)}
-\noindent\newline Here is my answer for number 1:
+\noindent\newline Here is my answer for number 1 and 2:
 
-\includegraphics[scale=0.64]{hw6_1}\noindent\newline
-
-\noindent\newline Here is my answer for number 2:
-
-\includegraphics[scale=0.64]{hw6_2}\noindent\newline
+\includegraphics[scale=0.64]{n1n2}\noindent\newline
 
 \noindent\newline Here is my answer for number 3:
 
-\includegraphics[scale=0.64]{hw6_3}\noindent\newline
+\includegraphics[scale=0.64]{n3}\noindent\newline
 
 \noindent\newline Here is my answer for number 4:
 
-\includegraphics[scale=0.64]{hw6_4}\noindent\newline
+\includegraphics[scale=0.64]{n4}\noindent\newline
 
 \noindent\newline Here is my answer for number 5:
 
-\includegraphics[scale=0.64]{hw6_5_1}\noindent\newline
-\includegraphics[scale=0.64]{hw6_5_2}\noindent\newline
+\includegraphics[scale=0.64]{n5}\noindent\newline
 
 \noindent\newline Here is my answer for number 6:
 
-\includegraphics[scale=0.64]{hw6_6}\noindent\newline
-\includegraphics[scale=0.64]{hw6_6_2}\noindent\newline
+\includegraphics[scale=0.64]{n6}\noindent\newline
 
 \subsubsection{Part 1 (Bottom)}
 \noindent\newline Here is my answer for number 1:
@@ -610,12 +604,16 @@ The last language that will be compared is Python. Python is another imperative 
 
 
 \subsection{Paper Conclusion}
-In summary, Prolog is an influential and unique programming language that provides an array of impressive features and applications. Its proficiency in logic programming, rule-based systems, and natural language processing make it an excellent resource for domains like automated planning and expert systems. While popular languages such as C++, Java, and Python are impressive in their own respect, Prolog offers a different approach and coding convention for programmers. Despite being developed many decades ago, Prolog continues to be relevant in todays computer science world, and will continue to be used with the growing field of Artificial Intelligence.
-...
+In summary, Prolog is an influential and unique programming language that provides an array of impressive features and applications. Its proficiency in logic programming, rule-based systems, and natural language processing make it an excellent resource for domains like automated planning and expert systems. While popular languages such as C++, Java, and Python are impressive in their own respect, Prolog offers a different approach and coding convention for programmers. Despite being developed many decades ago, Prolog continues to be relevant in todays computer science world, and will continue to be used with the growing field of Artificial Intelligence. Moreover, it's important to note that Prolog's influence extends beyond its current popularity. While it may not be as fashionable as some contemporary languages, Prolog has left a lasting impact on various areas of computer science. For instance, Prolog has significantly contributed to the development of constraint programming, a field focused on solving combinatorial problems by specifying constraints and allowing the system to find solutions that satisfy those constraints. Additionally, Prolog's concept of logic programming has influenced the implementation of type classes in Haskell, which provide a powerful mechanism for ad hoc polymorphism. Furthermore, Prolog's logical foundations have influenced the development of standards such as RDF (Resource Description Framework) and RDF Schema (RDFS), which play a crucial role in representing and sharing structured information on the web.
+
+\noindent\newline These examples illustrate how Prolog's ideas and concepts have permeated various areas of computer science, leaving a lasting impact on the field. While its direct usage may have declined, its influence continues to shape the design and implementation of programming languages, constraint solving techniques, and knowledge representation systems. Exploring Prolog's influence further would provide valuable insights into the lasting legacy of this unique programming language.
+
 
 \section{Conclusions}\label{conclusions}
 
-(approx 400 words) A critical reflection on the content of the course. Step back from the technical details. How does the course fit into the wider world of software engineering? What did you find most interesting or useful? What improvements would you suggest?
+I found this course very interesting. This course reminded me much of CPSC 354 (Programming Languages) that I took with Professor Kurz in Fall of 2022. Some concepts were decently related (DFA's, NFA's), while others were very different and unique. Kurz's courses always challenge me to get a deeper understanding in the theory of Computer Science, which is a great trait to obtain. The most interesting thing about this course was learning about P2P networks, and how the internet could in theory be completely different by using this. All of these topics will be with me for the rest of my Computer Science career, and I am grateful for that. This course was extremely wide and had many lectures that were in-depth. By widening my experience of Software Engineering by taking CPSC 354 and CPSC 406, I feel more comfortable going into the real world of Software Engineering. I am starting my first Internship this Summer, but I feel much more prepared after taking these courses. The semester long group project was very fun as well because it allowed for a lot of flexibility and creativity. My group decided to make Discord Bot that would moderate the server. By the time the semester ended, our bot could delete messages, add a sentiment analysis to user merit scores, mute users who were spamming, and more. I found it very enjoyable to create this bot and my teammates were very fun to work with. I enjoyed gaining some group experience as well because usually I would love to work by myself. However, I understand that in the real world that I would have a team when in the Software world. This was a great experience for me!
+
+The first thing I would suggest to improve this course would be to include a presentation in the middle of the semester for the group project. This presentation should be more relaxed and just checkpoint to make sure projects are on track and get suggestions from students in person rather than just a discussion post. I think the idea of new students continuing the projects created this semester is really interesting. It would be very unique to see how students continued my groups discord bots. What differences would they implement? What can the bot do differently and more of? I find these very fascinating and I want to see how it would turn up. Possibly my groups bot is actually used in a large server and some sort of analysis is done to check how the bot is helping or even hurting the server. 
 
 \begin{thebibliography}{99}
 \bibitem[ALG]{Alg} \href{https://github.com/alexhkurz/algorithm-analysis-2023}{Algorithm Analysis}, Chapman University, 2023. \newline
