Abstract and Introduction of Entire Report Done

--- a/report.tex
+++ b/report.tex
@@ -60,13 +60,13 @@
 \maketitle
 
 \begin{abstract}
-Consisting of CPSC 406 Material at Chapman University with Professor Alexander Kurz. This report will include an Introduction, Weekly Homework, and a Paper on the group project, which is done throughout the semester. 
+Consisting of CPSC 406 Material at Chapman University with Professor Alexander Kurz. This report will include an Introduction, Weekly Homework, and a Paper on Prolog.
 \end{abstract}
 
 \tableofcontents
 
 \section{Introduction}\label{intro}
-This report...
+This report covers the weekly homework from Algorithm Analysis (CPSC 406) from Chapman University taught by Professor Alexander Kurz. Additionally a research paper on the programming language Prolog. This course had lessons about DFA's, NFA's, P2P Networks, Automata, Distributed Hash Tables and more.
 
 \section{Homework}\label{homework}
 
